<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="tcd.training.com.trainingproject.CommunicateBetweenActivities.UsingBundle.ReceivePrimitiveTypesUsingBundleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integer_type"/>

        <TextView
            android:id="@+id/tv_integer_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_included_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/double_type"/>

        <TextView
            android:id="@+id/tv_double_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_included_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/boolean_type"/>

        <TextView
            android:id="@+id/tv_boolean_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_included_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/string_type"/>

        <TextView
            android:id="@+id/tv_string_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_included_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/array_list_type"/>

        <ListView
            android:id="@+id/lv_array_list_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hash_map_type"/>

        <ListView
            android:id="@+id/lv_hash_map_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>
