<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context="tcd.training.com.trainingproject.ExternalHardware.Camera.TakePhotoTopicActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_slide_show"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/btn_take_photo_default_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_default_camera"/>

    <Button
        android:id="@+id/btn_take_photo_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_library"/>

    <Button
        android:id="@+id/btn_take_photo_camera_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_camera_api"/>

    <Button
        android:id="@+id/btn_take_photo_camera2_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_camera2_api"/>

</LinearLayout>
