<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="tcd.training.com.trainingproject.ServicesAndThreads.IntentService.IntentServiceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service_explanation"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_result_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_receiver"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_broadcast_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_receiver"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_event_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_bus"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_rx_java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rx_java"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_integer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="100sp"
        tools:text="0"/>

</LinearLayout>
