<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    tools:context="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.DetailsActivity">

    <TextView
        android:id="@+id/tv_page_number_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_tap_send_data_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tap_send_data_message"/>

    <Button
        android:id="@+id/btn_send_data_using_interface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_using_interface"/>

    <Button
        android:id="@+id/btn_send_data_using_get_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_using_get_activity"/>

    <Button
        android:id="@+id/btn_send_data_using_local_broadcast_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_using_local_broadcast_receiver"/>

    <TextView
        android:id="@+id/tv_receive_data_from_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

</LinearLayout>
